--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -100,6 +100,7 @@ jobs:
       - name: Install extra dependencies
         run: |
           sudo apt-get -y install \
+            aom-tools \
             libaom-dev \
             libavif-dev \
             libgphoto2-dev \
