--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -174,237 +174,13 @@ jobs:
           name: artifact-appimage-${{ runner.arch }}
           retention-days: 1
 
-  Windows:
-    if: github.repository == 'darktable-org/darktable' || github.event_name == 'workflow_dispatch'
-    name: Nightly darktable Windows
-    runs-on: windows-latest
-    strategy:
-      fail-fast: true
-      matrix:
-        btype:
-          - Release
-        msystem:
-          - UCRT64
-        target:
-          - skiptest
-        generator:
-          - Ninja
-        eco: [-DBINARY_PACKAGE_BUILD=ON]
-    defaults:
-      run:
-        shell: msys2 {0}
-    env:
-      SRC_DIR: ${{ github.workspace }}/src
-      BUILD_DIR: ${{ github.workspace }}/build
-      INSTALL_PREFIX: ${{ github.workspace }}/install
-      ECO: ${{ matrix.eco }}
-      CMAKE_BUILD_TYPE: ${{ matrix.btype }}
-      TARGET: ${{ matrix.target }}
-      GENERATOR: ${{ matrix.generator }}
-    steps:
-      - uses: msys2/setup-msys2@v2
-        with:
-          msystem: ${{ matrix.msystem }}
-          install: >-
-            git
-            intltool
-            po4a
-          pacboy: >-
-            cc:p
-            cmake:p
-            libxslt:p
-            ninja:p
-            nsis:p
-            python-jsonschema:p
-            curl:p
-            drmingw:p
-            gcc-libs:p
-            gettext:p
-            gmic:p
-            graphicsmagick:p
-            gtk3:p
-            icu:p
-            imath:p
-            iso-codes:p
-            lcms2:p
-            lensfun:p
-            libavif:p
-            libgphoto2:p
-            libheif:p
-            libjpeg-turbo:p
-            libjxl:p
-            libpng:p
-            librsvg:p
-            libsecret:p
-            libtiff:p
-            libwebp:p
-            libxml2:p
-            lua:p
-            omp:p
-            openexr:p
-            openjpeg2:p
-            osm-gps-map:p
-            portmidi:p
-            pugixml:p
-            SDL2:p
-            sqlite3:p
-            webp-pixbuf-loader:p
-            zlib:p
-          update: false
-      - name: Build and install the latest compatible version of exiv2
-        run: |
-          git clone --branch v0.27.7 --depth 1 https://github.com/Exiv2/exiv2 src-exiv2
-          cd src-exiv2
-          cmake -S . -B build -G Ninja \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DBUILD_SHARED_LIBS=ON \
-            -DEXIV2_ENABLE_BMFF=ON \
-            -DEXIV2_ENABLE_NLS=ON \
-            -DEXIV2_ENABLE_VIDEO=OFF \
-            -DEXIV2_ENABLE_WIN_UNICODE=ON \
-            -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX}
-          cmake --build build
-          cmake --install build
-          cd ..
-      - name: Cancel workflow if job fails
-        if: ${{ failure() }}
-        uses: andymckay/cancel-action@0.5
-      - run: git config --global core.autocrlf input
-        shell: bash
-      - name: Checkout darktable master branch
-        run: |
-          # Note that we can't make a shallow clone to reduce clone traffic and time, as we have to
-          # fetch the entire history to correctly generate the version for the installation package filename
-          git clone -b ${{ github.ref_name }} https://github.com/${{ github.repository }} src
-          pushd src
-          git submodule init
-          git config submodule.src/tests/integration.update none
-          git submodule update
-          popd
-      - name: Update Lensfun data
-        run: |
-          lensfun-update-data
-      - name: Build and Install
-        run: |
-          cmake -E make_directory "${BUILD_DIR}"
-          cmake -E make_directory "${INSTALL_PREFIX}"
-          $(cygpath ${SRC_DIR})/.ci/ci-script.sh
-      - name: Create Inno Setup installer
-        shell: pwsh
-        run: |
-          choco upgrade innosetup --no-progress
-          cd ${{ env.INSTALL_PREFIX }}
-          cp ${{ env.BUILD_DIR }}/darktable.iss ./
-          # Create multi-resolution .ico file expected by the .iss script for use as setup file icon.
-          magick ${{ env.SRC_DIR }}/data/pixmaps/256x256/darktable.png -define icon:auto-resize="256,128,64,48,32,16" dt_logo_multiresolution.ico
-          iscc "darktable.iss"
-          mv Output/*.exe ${{ env.BUILD_DIR }}/
-      - name: Create NSIS installer
-        run: |
-          cd "${BUILD_DIR}"
-          cmake --build "${BUILD_DIR}" --target package
-      - name: Get version info
-        run: |
-          cd ${SRC_DIR}
-          echo "VERSION=$(git describe --tags --match release-* | sed 's/^release-//;s/-/+/;s/-/~/;s/rc/~rc/')" >> $GITHUB_ENV
-          ([[ ${MSYSTEM_CARCH} == x86_64 ]] && echo "SYSTEM=win64" || echo "SYSTEM=woa64") >> $GITHUB_ENV
-      - name: Package upload
-        uses: actions/upload-artifact@v6
-        with:
-          path: ${{ env.BUILD_DIR }}/*.exe
-          name: artifact-windows-${{ runner.arch }}
-          retention-days: 2
-
-  macOS:
-    if: github.repository == 'darktable-org/darktable' || github.event_name == 'workflow_dispatch'
-    name: Nightly darktable macOS
-    runs-on: ${{ matrix.build.os }}
-    strategy:
-      fail-fast: true
-      matrix:
-        build:
-          - { os: macos-14,       xcode: 16.2, deployment: 14.0 } # AppleClang 16, arm64
-          - { os: macos-15-intel, xcode: 26.2, deployment: 15.0 } # AppleClang 17, x86_64
-        compiler:
-          - { compiler: XCode,   CC: cc, CXX: c++ }
-        btype: [ Release ]
-        eco: [-DBINARY_PACKAGE_BUILD=ON -DBUILD_CURVE_TOOLS=ON -DBUILD_NOISE_TOOLS=ON -DUSE_GRAPHICSMAGICK=ON -DUSE_IMAGEMAGICK=OFF]
-        target:
-          - skiptest
-        generator:
-          - Ninja
-    env:
-      DEVELOPER_DIR: /Applications/Xcode_${{ matrix.build.xcode }}.app/Contents/Developer
-      CC: ${{ matrix.compiler.CC }}
-      CXX: ${{ matrix.compiler.CXX }}
-      MACOSX_DEPLOYMENT_TARGET: ${{ matrix.build.deployment }}
-      SRC_DIR: ${{ github.workspace }}/src
-      BUILD_DIR: ${{ github.workspace }}/src/build
-      INSTALL_PREFIX: ${{ github.workspace }}/src/build/macosx
-      ECO: ${{ matrix.eco }}
-      CMAKE_BUILD_TYPE: ${{ matrix.btype }}
-      GENERATOR: ${{ matrix.generator }}
-      TARGET: ${{ matrix.target }}
-    steps:
-      - name: Checkout darktable master branch
-        run: |
-          # Note that we can't make a shallow clone to reduce clone traffic and time, as we have to
-          # fetch the entire history to correctly generate the version for the disk image filename
-          git clone -b ${{ github.ref_name }} https://github.com/${{ github.repository }} src
-          pushd src
-          git submodule init
-          git config submodule.src/tests/integration.update none
-          git submodule update
-          popd
-      - name: Install Base Dependencies
-        run: |
-          brew update > /dev/null || true
-          cd src/.ci
-          export HOMEBREW_NO_INSTALL_UPGRADE=1
-          brew bundle --verbose || true
-
-          # rebuild graphicsmagick for macOS bundling
-          export HOMEBREW_NO_INSTALL_FROM_API=1
-          gm_formula=`brew edit --print-path graphicsmagick`
-          cat $gm_formula | sed 's/--with-modules/--disable-installed/1' > gm_formula.tmp
-          mv gm_formula.tmp $gm_formula
-          brew reinstall --build-from-source --force graphicsmagick
-
-          # handle keg-only libs
-          brew link --force libomp
-          brew link --force libsoup
-      - name: Cancel workflow if job fails
-        if: ${{ failure() }}
-        uses: andymckay/cancel-action@0.5
-      - name: Build and Install
-        run: |
-          cmake -E make_directory "${BUILD_DIR}";
-          cmake -E make_directory "${INSTALL_PREFIX}";
-          ./src/.ci/ci-script.sh;
-      - name: Build macOS package
-        run: |
-          ./src/packaging/macosx/3_make_hb_darktable_package.sh
-      - name: Create DMG file
-        run: |
-          ./src/packaging/macosx/4_make_hb_darktable_dmg.sh
-      - name: Get version info
-        run: |
-          cd ${SRC_DIR}
-          echo "VERSION=$(git describe --tags --match release-* | sed 's/^release-//;s/-/+/;s/-/~/;s/rc/~rc/')" >> $GITHUB_ENV
-          echo "ARCHITECTURE=$(uname -m)" >> $GITHUB_ENV
-      - name: Package upload
-        uses: actions/upload-artifact@v6
-        with:
-          path: ${{ env.INSTALL_PREFIX }}/darktable-${{ env.VERSION }}-${{ env.ARCHITECTURE }}.dmg
-          name: artifact-macos-${{ runner.arch }}
-          retention-days: 2
 
   upload_to_release:
     permissions:
       # We need write permission to update the nightly tag
       contents: write
     runs-on: ubuntu-latest
-    needs: [AppImage, Windows, macOS]
+    needs: [AppImage]
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v7
@@ -434,6 +210,4 @@ jobs:
 
             __Please help us improve Darktable by reporting any issues you encounter!__ :wink:
           files: |
-            artifact-appimage-*/*
-            artifact-windows-*/*
-            artifact-macos-*/*
+            **/*
