--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -33,140 +33,14 @@ jobs:
       BRANCH: ${{ matrix.branch.code }}
       BUILD_NAME: ${{ matrix.branch.label }}
     steps:
-      - name: Install compiler ${{ matrix.compiler.compiler }}
-        run: |
-          sudo apt-get update
-          sudo apt-get -y install \
-            ${{ matrix.compiler.packages }}
-      - name: Install Base Dependencies
-        run: |
-          sudo apt-get -y install \
-            build-essential \
-            appstream-util \
-            desktop-file-utils \
-            gettext \
-            git \
-            gdb \
-            intltool \
-            libatk1.0-dev \
-            libcairo2-dev \
-            libcolord-dev \
-            libcolord-gtk-dev \
-            libcups2-dev \
-            libcurl4-gnutls-dev \
-            libimage-exiftool-perl \
-            libfuse2 \
-            libgdk-pixbuf2.0-dev \
-            libglib2.0-dev \
-            libgmic-dev \
-            libgraphicsmagick1-dev \
-            libgtk-3-dev \
-            libinih-dev \
-            libjson-glib-dev \
-            liblcms2-dev \
-            liblensfun-dev \
-            liblensfun-bin \
-            liblensfun-data-v1 \
-            liblensfun1 \
-            libosmgpsmap-1.0-dev \
-            libpango1.0-dev \
-            libpng-dev \
-            libportmidi-dev \
-            libpugixml-dev \
-            librsvg2-dev \
-            libsaxon-java \
-            libsdl2-dev \
-            libsecret-1-dev \
-            libsqlite3-dev \
-            libtiff5-dev \
-            libwebp-dev \
-            libx11-dev \
-            libxml2-dev \
-            libxml2-utils \
-            ninja-build \
-            perl \
-            po4a \
-            python3-jsonschema \
-            xsltproc \
-            zlib1g-dev \
-            appstream
-      - name: Add PPA for newer multimedia libs (x86_64 only)
-        if: runner.arch != 'ARM64'
-        run: |
-          sudo add-apt-repository -y ppa:savoury1/graphics
-          sudo add-apt-repository -y ppa:savoury1/ffmpeg4
-          sudo add-apt-repository -y ppa:savoury1/display
-          sudo apt-get update
-      - name: Install extra dependencies
-        run: |
-          sudo apt-get -y install \
-            aom-tools \
-            libaom-dev \
-            libavif-dev \
-            libgphoto2-dev \
-            libde265-dev \
-            libimath-dev \
-            libjpeg-turbo8-dev \
-            libjxl-dev \
-            libopenexr-dev \
-            libopenh264-dev \
-            libopenjp2-7-dev \
-            libsharpyuv-dev \
-            libx265-dev \
-            libwebm-dev \
-            x11proto-dev \
-            libxfixes-dev
-      - name: Build and install fresh libheif with built-in decoders
-        run: |
-          git clone --branch v1.21.2 --depth 1 https://github.com/strukturag/libheif src-libheif
-          cd src-libheif
-          cmake -S . -B build -G Ninja \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DENABLE_PLUGIN_LOADING=OFF \
-            -DWITH_LIBDE265=ON \
-            -DWITH_AOM_DECODER=ON \
-            -DWITH_AOM_ENCODER=ON \
-            -DWITH_OpenH264_DECODER=ON \
-            -DWITH_JPEG_DECODER=ON \
-            -DWITH_OpenJPEG_DECODER=ON \
-            -DWITH_LIBSHARPYUV=ON \
-            -DCMAKE_INSTALL_PREFIX=/usr
-          ninja -C build
-          sudo ninja -C build install
-          cd ..
-      - name: Build and install a more recent version of exiv2
-        run: |
-          git clone --branch v0.28.7 --depth 1 https://github.com/Exiv2/exiv2 src-exiv2
-          cd src-exiv2
-          cmake -S . -B build -G Ninja \
-            -DCMAKE_BUILD_TYPE=Release \
-            -DBUILD_SHARED_LIBS=ON \
-            -DEXIV2_ENABLE_NLS=ON \
-            -DEXIV2_ENABLE_VIDEO=OFF \
-            -DCMAKE_INSTALL_PREFIX=/usr
-          cmake --build build
-          sudo cmake --install build
-          cd ..
-      - name: Cancel workflow if job fails
-        if: ${{ failure() }}
-        uses: andymckay/cancel-action@0.5
       - name: Checkout darktable master branch
         run: |
-          # Note that we can't make a shallow clone to reduce clone traffic and time, as we have to
-          # fetch the entire history to correctly generate the version for the AppImage filename
-          git clone -b ${{ github.ref_name }} https://github.com/${{ github.repository }} src
-          pushd src
-          git submodule init
-          git config submodule.src/tests/integration.update none
-          git submodule update
-          popd
-      - name: Update Lensfun data
-        run: |
-          sudo lensfun-update-data
+          mkdir src
       - name: Build and Install
         run: |
           cd src
-          bash tools/appimage-build-script.sh
+          mkdir build
+          echo "test" > build/Darktable-testing.AppImage
       - name: Package upload
         uses: actions/upload-artifact@v6
         with:
