--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -58,6 +58,15 @@ jobs:
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v7
+
+      - name: Get current date and set as environment variable
+        run: |
+          # Format date as YYYYMMDD
+          NOW=$(date +'%Y%m%d')
+          # Set the environment variable for subsequent steps
+          echo "RELEASE_DATE=$NOW" >> $GITHUB_ENV
+        shell: bash
+
       - name: Update nightly release
         uses: softprops/action-gh-release@v2.4.2
         env:
@@ -66,7 +75,7 @@ jobs:
           tag_name: nightly
           prerelease: true
           draft: true
-          name: 'Darktable nightly build $$'
+          name: 'Darktable nightly build ${{ env.RELEASE_DATE }}'
           # Please do not modify the body text by adding line breaks in paragraphs, as this text should display well on screens of different widths
           body: |
             This is a nightly build of Darktable.
