--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -74,7 +74,9 @@ jobs:
         with:
           tag_name: nightly
           prerelease: true
-          draft: true
+          # We don't want a release that is in the process of being prepared
+          # and not yet ready for publication to be visible
+          draft: ${{ startsWith(github.ref, 'refs/tags/release') }}
           name: 'Darktable nightly build ${{ env.RELEASE_DATE }}'
           # Please do not modify the body text by adding line breaks in paragraphs, as this text should display well on screens of different widths
           body: |
